      - Account.m_Comments, Account.m_Tags
    - use XmlReader instead of XmlDocument.Load() to parse the accounts file
    - use DateTime.Now cache
    - removed from Notoriety: CheckAggressor(), CheckAggressed()
    - [docgen is disabled by default
    - make IUsesRemaining public
    - removed scripts:
      - Misc/AccountPrompt.cs
  * extended API for optimization
    - Mobile: added AggressorsOrNull, FindAggressorByAttacker(),
      FindAggressorByDefender(), AggressedOrNull, FindAggressedByAttacker(),
      FindAggressedByDefender(), Peaceful
    - Mobile.Stabled: HasStabled(), AddStabled(), RemoveStabled(),
      StabledOrNull
    - Mobile.VisibilityList: ClearVisibilityList()
    - Mobile.PermaFlags: HasPermaFlags(), IsPermaFlaggedTo()
  * gameplay related bugfixes
    - blank keys should not be able to unlock doors with KeyValue 0 (patch
      from Kai Sassmannshausen)
    - check CanBeHarmful() in WhirlwindAttack
    - fixed PlayerVendor cash bug, thanks to pmb
  * moved into separate script libraries:
    - Engines.MyRunUO
    - Engines.Reports
    - Engines.RemoteAdmin
  * upgraded log4net to 1.2.10
  * use log4net from Debian package
  * don't link core and scripts with mysql and postgresql drivers
  * imported RunUO data and saves directory
  * run SunUO in a loop
    - added Core.Shutdown() supporting the environment variable SUNUO_EXIT
  * sunuo-control: append output to console.log; start new session

 --

sunuo (0.3.1) unstable; urgency=low

  * optimizations in the serialization code
    - cache position in BinaryFileWriter
    - sealed the serialization classes
    - enlarged BinaryFileWriter's buffer to 32kB
  * removed BinaryFileWriter.UnderlyingStream
  * BinaryFileWriter.Flush() is private
  * Mobile: better SkillMod==null handling

 -- Max Kellermann <max@duempel.org>  Wed,  8 Feb 2006 23:26:45 +0100

sunuo (0.3.0) unstable; urgency=low

  * distribute log4net.dll
  * removed the --logfile option